# DifferentialMPC

./: CMakeLists.txt  README.md
include/: diffmpc.hpp
src/: diffmpc.cpp  main.cpp
